--- a/telegraf.conf
+++ b/telegraf.conf
@@ -13,13 +13,13 @@
   omit_hostname = false
   
 [[outputs.influxdb_v2]]
-  urls = ["http://127.0.0.1:8086"]
-  token = ""
-  organization = ""
-  bucket = ""
+  urls = ["$TGR_CFG_DB_WEBADDRES"]
+  token = "$TGR_CFG_DB_APIKEY"
+  organization = "$TGR_CFG_DB_ORGANIZATION"
+  bucket = "$TGR_CFG_DB_BUCKET"
 
 [[inputs.ipmi_sensor]]
-  servers = ["ADMIN:ADMIN@lan(127.0.0.1)"]
+  servers = ["$TGR_CFG_IPMI_LOGINSTRING"]
   interval = "30s"
   timeout = "20s"
   metric_version = 2
