--- a/telegraf.conf
+++ b/telegraf.conf
@@ -13,7 +13,7 @@
   omit_hostname = false
   
 [[outputs.influxdb_v2]]
-  urls = ["$TGR_CFG_DB_WEBADDRES"]
+  urls = ["$TGR_CFG_DB_WEBADDRESS"]
   token = "$TGR_CFG_DB_APIKEY"
   organization = "$TGR_CFG_DB_ORGANIZATION"
   bucket = "$TGR_CFG_DB_BUCKET"
